package com.apuliasoft.designpattern.strategy.example;

public interface ISortBehaviour {
    List sort(List list);
}