@startuml Strategy Pattern example class diagram
title Strategy Pattern example class diagram
class List {
    ISortBehaviour sortBehaviour
    List sort()
}

interface ISortBehaviour {
    List sort(List list)
}

class BubbleSortBehaviour {
    List sort(List list)
}

class MergeSortBehaviour {
    List sort(List list)
}

List -> ISortBehaviour
ISortBehaviour <|-- BubbleSortBehaviour
ISortBehaviour <|-- MergeSortBehaviour
@enduml